feat: update CreateNotificationRequestDTO and NotificationResponseDTO to include updatedAt, refactor notification creation methods